<resources>
    <string name="app_name">MyMiso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offer">Offer</string>
    <string name="rating_4_5">Rating: 4.5</string>
    <string name="cost_for_two">Cost for Two</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="profile">Profile</string>
    <string name="dineout">Dineout</string>
    <string name="home">Home</string>
    <string name="some_description">some description</string>
    <string name="offer_20_off">Offer: 20% off</string>
    <string name="cost_for_two_30">Cost for two: $30</string>
    <string name="rating_4_5_2">Rating: 4.5</string>
    <string name="restaurant_name_2">Restaurant Name</string>
    <string name="search">Search...</string>
    <string name="some_description2">Some description</string>
    <string name="search2">Search...</string>
    <string name="search3">Search...</string>
</resources>